# web-hw05-WebSockets

./: README.md  pyproject.toml
web-hw05/chat/: pars_message.py  server.py
