[tool.poetry]
name = "web-hw05-websockets"
version = "0.1.0"
description = ""
authors = ["Dmytro Oseledko <d.oseledko@outlook.com>"]
readme = "README.md"
packages = [{include = "web_hw05_websockets"}]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.4"
websockets = "^10.4"
names = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
